# nesrecomp

./: .gitignore  .gitmodules  .mcp.json.example  ACCURACY_PHASE_PLAN.md  CLAUDE.md  COSIM.md  COVERAGE.md  DEVELOPMENT.md  ENHANCEMENTS.md  EXTRACTION.md  ISSUES.md  MEMORY.md  MODDING.md  NES_ACCURACY_BURNDOWN.md  PATTERNS.md  README.md  REVERSE_DEBUGGER.md  SPLITGEN_MIGRATION.md  SUMMARY.md  TCP.md  baserom_annotations.csv  check_bank.py  decode_bank5.py  decode_fixed.py  run_smb.bat
docs/: MULTITIER_PORT_PROPOSAL.md  PHASE1_HANDOFF.md  PHASE1_INTERP_FALLBACK_PLAN.md  RECOMP_NET.md  SHADOW_ENHANCEMENTS.md
games/faxanadu/: extras.c  extras.h  game.cfg
games/super-mario-bros/: ISSUES.md  extras.c  extras.h  game.cfg
lib/: CMakeLists.txt
recompiler/: CMakeLists.txt
recompiler/src/: annotations.c  annotations.h  code_generator.c  code_generator.h  coverage.c  coverage.h  cpu6502_decoder.c  cpu6502_decoder.h  function_finder.c  function_finder.h  game_config.c  game_config.h  main_nes.c  rom_parser.c  rom_parser.h  symbol_table.c  symbol_table.h
runner/: CMakeLists.txt  HDPACK.md  launcher.cmake  nestopia_cmake.cmake  nestopia_oracle.patch  recomp_net.cmake  runner.cmake
runner/include/: apu.h  config.h  controller.h  coroutine.h  crc32.h  debug_server.h  game_extras.h  hdpack.h  input_script.h  interp.h  keybinds.h  mapper.h  nes_runtime.h  nestopia_bridge.h  nestopia_oracle_cmds.h  override_chr.h  ppu_dot.h  recomp_stack.h  reverse_debug.h  save_ram.h  savestate.h
runner/src/: apu.c  apu_shadow.c  apu_shadow.h  audio_shadow.c  audio_shadow.h  chr_codec.c  chr_codec.h  color_lut.c  color_lut.h  config.c  controller.c  coroutine.c  crc32.c  debug_server.c  debug_server_stub.c  hdpack.c  input_script.c  interp.c  keybinds.c  launcher.c  logger.c  logger.h  main_runner.c  mapper.c  mapper.h  nestopia_bridge.cpp  nestopia_oracle_cmds.c  override_chr.c  ppu_dot.c  ppu_renderer.c  recomp_audio_debug.h  recomp_audio_drc.h  recomp_stack.c  reverse_debug.c  runtime.c  save_ram.c  savestate.c  stb_image_write.h
runner/src/launcher/: launcher_capi.h  launcher_gui.cpp  launcher_gui.h
runner/src/launcher/assets/: gamedb.json  launcher.rml
runner/src/lobby/: nes_lobby_client.c  nes_lobby_client.h
runner/src/lobby/ws/: rnet_sha1.c  rnet_sha1.h  rnet_ws.c  rnet_ws.h
runner/src/netplay/: nes_launcher_netplay.c  nes_launcher_netplay.h  nes_netplay.c  nes_netplay.h
runner/src/netplay/compat/: pthread.h
tests/: README.md  codegen.test.ts  interp_selftest.c  package.json  patterns.test.ts  vitest.config.ts
tests/helpers/: recompile.ts  rom-builder.ts
tests/mapper/: CMakeLists.txt  mapper_selftest.c
tools/: README.md  analyze_rom.py  build_cli.py  build_symbols_from_lbl.py  check_boot.py  check_ppu.py  check_ppu2.py  check_ppu3.py  cli.py  extract_bins_from_xml.py  extract_chr.py  extract_levels.py  extract_metasprites.py  extract_palettes.py  extract_player_sprites.py  hdpack_gen.py  mesen_mcp.lua  mesen_mcp_server.py  mesen_mcp_smb.lua  nes_audio_ab.py  nes_cosim.py  parse_trace.py
tools/abaudio_scripts/: smb_start.txt
tools/nesref/: .gitignore  README.md  build.bat  frontend.cpp
